[gd_scene load_steps=2 format=3 uid="uid://2c2wft1bvg6t"]

[ext_resource type="Script" uid="uid://cerxqualk3c43" path="res://interfaces/screen_interface.gd" id="1_8mo7j"]

[node name="ScreenInterface" type="PanelContainer"]
custom_minimum_size = Vector2(640, 480)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_8mo7j")

[node name="MarginAllowance" type="MarginContainer" parent="."]
layout_mode = 2

[node name="MainSplit" type="HSplitContainer" parent="MarginAllowance"]
layout_mode = 2
dragging_enabled = false

[node name="LeftSplit" type="VSplitContainer" parent="MarginAllowance/MainSplit"]
layout_mode = 2
size_flags_horizontal = 3
dragging_enabled = false

[node name="Control" type="PanelContainer" parent="MarginAllowance/MainSplit/LeftSplit"]
layout_mode = 2
size_flags_vertical = 3

[node name="MenuSplit" type="HSplitContainer" parent="MarginAllowance/MainSplit/LeftSplit"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
dragging_enabled = false

[node name="Control" type="PanelContainer" parent="MarginAllowance/MainSplit/LeftSplit/MenuSplit"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="Control2" type="PanelContainer" parent="MarginAllowance/MainSplit/LeftSplit/MenuSplit"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="PanelContainer" parent="MarginAllowance/MainSplit"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[connection signal="resized" from="." to="." method="_on_resized"]
